# Genllm

./: .gitignore  CMakeLists.txt  README.md  build.py
.github/workflows/: ci.yml
.understand-anything/: .understandignore  config.json  knowledge-graph.json  meta.json
docs/: architecture.html
docs/graph/: build-graph-beginner.html  build-graph-detail.html  graph-demo.html
docs/schedule/: schedule_explain.html
docs/workflow/: LEARNING_GUIDE.md  workflow-visualization.html
include/backend/cpu/: attention.h
include/backend/cuda/: activation.h  attention.h
include/backend/vulkan/: attention.h  push_constants.h  vulkan_context.h
include/backend/vulkan/spv/: add.h  attention.h  div.h  flash_attention.h  gelu.h  layer_norm.h  linear.h  mul.h  page_attention.h  permute.h  relu.h  rms_norm.h  rope.h  silu.h  sub.h
include/core/: executor.h  gguf_parser.h  graph.h  kernels.h  manager.h  page_attention.h  resource.h  scheduler.h
include/model/: Qwen3.hpp  Qwen35.hpp  model.h  op_factory.hpp
include/utils/: tools.hpp  utils.hpp
shader/add/: add_bf16.comp
shader/attention/: page_attn_bf16.comp  page_attn_f16.comp  sdpa_bf16.comp  sdpa_f16.comp
shader/flash_attention/: flash_attn_bf16.comp  flash_attn_f16.comp
shader/layer_norm/: layer_norm_bf16.comp  layer_norm_f16.comp  layer_norm_f32.comp
shader/linear/: linear_bf16.comp  linear_f16.comp  linear_f32.comp  linear_gemv_bf16.comp  linear_gemv_f16.comp  linear_gemv_f32.comp
shader/page_attention/: page_attn_bf16.comp  page_attn_f16.comp
shader/permute/: permute_bf16.comp  permute_f16.comp  permute_f32.comp
shader/rms_norm/: rms_norm_bf16.comp  rms_norm_f16.comp  rms_norm_f32.comp
shader/rope/: rope_bf16.comp  rope_f16.comp  rope_f32.comp
src/backend/: backend_vulkan.cpp
src/backend/cpu/: attention.cpp  linear.cpp  rope.cpp
src/backend/cuda/: activation.cu  attention.cu  memcpy.cu
src/backend/vulkan/: arithmetic.cpp  attention.cpp  linear.cpp  memcpy.cpp  normalization.cpp  rope.cpp  shape.cpp
src/core/: executor.cpp  gguf_parser.cpp  graph.cpp  kernels.cpp  manager.cpp  page_attention.cpp  pools.cpp  resource_cpu.cpp  resource_vulkan.cpp  scheduler.cpp
src/model/: Qwen3.cpp  Qwen35.cpp  model.cpp
tests/: benchmark.cpp  genllm-cli.cpp  main.cpp  test_dtype.cpp  test_ops_cpu.cpp  test_page_attention.cpp  test_tensor.cpp  test_utils.h
